<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atendimentoAtm@gmail.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_email">Email</string>
    <string name="menu_sobre">Sobre</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget fringilla neque. Maecenas vel congue risus. Aliquam porta mauris vitae nibh pulvinar, vitae euismod libero posuere. Fusce vel libero id eros euismod ultricies. Suspendisse massa risus, ultrices tincidunt aliquam et, imperdiet eu ligula. Morbi tempus, dolor in pretium semper, turpis tellus euismod nisl, vitae porta lacus turpis tincidunt diam. Suspendisse nec semper metus.</string>
    <string name="txtTitulo">Sistema de gestão de qualidade</string>
    <string name="txtIndicadores">Indicadores de desempenho</string>
    <string name="txtInfo">Em mais de 15 anos de existência a ATM acumula experiência em serviços de consultoria para empresas nacionais e multinacionais de diversos portes, tendo atendido mais de 1000 empresas desde sua abertura</string>
    <string name="cielo">Cielo</string>
    <string name="braskem">Braskem</string>
    <string name="gerdau">Gerdau</string>
    <string name="embraer">Embraer</string>
    <string name="natura">Natura</string>
    <string name="lojas_americanas">Lojas Americanas</string>
</resources>