<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_clientes" />
    </group>

    <item android:title="@string/entre_em_contato">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/menu_email"
                />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_sobre"
                />

        </menu>
    </item>
</menu>