<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.clientes.ClientesFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/menu_clientes"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/txtInfo" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgArrow"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/txtCielo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtCielo"
        android:text="@string/cielo"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        />

    <ImageView
        android:id="@+id/imgArrow2"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCielo"
        app:layout_constraintEnd_toStartOf="@id/txtBraskem"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtBraskem"
        android:text="@string/braskem"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCielo"
        />

    <ImageView
        android:id="@+id/imgArrow3"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBraskem"
        app:layout_constraintEnd_toStartOf="@id/txtGerdau"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtGerdau"
        android:text="@string/gerdau"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBraskem"
        />

    <ImageView
        android:id="@+id/imgArrow4"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGerdau"
        app:layout_constraintEnd_toStartOf="@id/txtEmbraer"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtEmbraer"
        android:text="@string/embraer"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGerdau"
        />

    <ImageView
        android:id="@+id/imgArrow5"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmbraer"
        app:layout_constraintEnd_toStartOf="@id/txtNatura"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtNatura"
        android:text="@string/natura"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmbraer"
        />

    <ImageView
        android:id="@+id/imgArrow6"
        style="@style/ImagemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNatura"
        app:layout_constraintEnd_toStartOf="@id/txtLojasAmericanas"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtLojasAmericanas"
        android:text="@string/lojas_americanas"
        style="@style/txtLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNatura"
        />

</androidx.constraintlayout.widget.ConstraintLayout>